--- a/Wordreference/Wordreference.Core/packages.config
+++ b/Wordreference/Wordreference.Core/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="portable-win81+wpa81" />
+  <package id="Microsoft.ApplicationInsights" version="0.15.0-build00179" targetFramework="portable-win81+wpa81" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="portable-win81+wpa81" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable-win81+wpa81" />
+  <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.16-beta" targetFramework="portable-win81+wpa81" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="portable-win81+wpa81" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="portable-win81+wpa81" />
   <package id="NotificationsExtensions.Portable" version="1.0.3" targetFramework="portable-win81+wpa81" />
