--- a/Wordreference/Wordreference.API/Wordreference.API.csproj
+++ b/Wordreference/Wordreference.API/Wordreference.API.csproj
@@ -42,10 +42,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Term.cs" />
-    <Compile Include="Model\Translation.cs" />
-    <Compile Include="Model\Translations.cs" />
-    <Compile Include="Model\Language.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Abstract\BaseDataService.cs" />
@@ -66,6 +62,12 @@
     <Reference Include="System.Net.Http.Primitives">
       <HintPath>..\packages\Microsoft.Net.Http.2.2.18\lib\portable-net40+sl4+win8+wp71\System.Net.Http.Primitives.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Wordreference.Model\Wordreference.Model.csproj">
+      <Project>{cc1bd8d5-6735-438b-bd11-d162cec11e32}</Project>
+      <Name>Wordreference.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
