--- a/Wordreference/Wordreference.API/packages.config
+++ b/Wordreference/Wordreference.API/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Bcl" version="1.1.6" targetFramework="portable-net45+wp80+win" requireReinstallation="True" />
-  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable-net45+win+wpa81+wp80+MonoAndroid10+MonoTouch10" />
-  <package id="Microsoft.Net.Http" version="2.2.18" targetFramework="portable-net45+wp80+win" requireReinstallation="True" />
-  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="portable-net45+win+wpa81+wp80+MonoAndroid10+MonoTouch10" />
+  <package id="HtmlAgilityPack" version="1.4.9" targetFramework="portable45-net45+win8+wp8+wpa81" userInstalled="true" />
+  <package id="Microsoft.Bcl" version="1.1.6" targetFramework="portable-net45+win8+wp8" requireReinstallation="true" userInstalled="true" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable-net45+win8+wp8+wpa81" userInstalled="true" />
+  <package id="Microsoft.Net.Http" version="2.2.18" targetFramework="portable-net45+win8+wp8" requireReinstallation="true" userInstalled="true" />
+  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="portable-net45+win8+wp8+wpa81" userInstalled="true" />
 </packages>
