Add fake user agent to fix bug on Windows app

--- a/Wordreference/Wordreference.Core/packages.config
+++ b/Wordreference/Wordreference.Core/packages.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.3" targetFramework="portable-win81+wpa81" userInstalled="true" />
-  <package id="Microsoft.ApplicationInsights" version="0.15.0-build00179" targetFramework="portable-win81+wpa81" userInstalled="true" />
-  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="portable-win81+wpa81" userInstalled="true" />
-  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable-win81+wpa81" userInstalled="true" />
-  <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.16-beta" targetFramework="portable-win81+wpa81" userInstalled="true" />
-  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="portable-win81+wpa81" userInstalled="true" />
-  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="portable-win81+wpa81" userInstalled="true" />
-  <package id="NotificationsExtensions.Portable" version="1.0.3" targetFramework="portable-win81+wpa81" userInstalled="true" />
-  <package id="PCLStorage" version="0.9.6" targetFramework="portable-net45+win8+wp8+wpa81" requireReinstallation="true" userInstalled="true" />
-  <package id="Portable.MvvmLightLibs" version="4.4.32.1" targetFramework="portable-win81+wpa81" userInstalled="true" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="portable-win81+wpa81" />
+  <package id="Microsoft.ApplicationInsights" version="0.15.0-build00179" targetFramework="portable-win81+wpa81" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable46-win81+wpa81" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable-win81+wpa81" />
+  <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.16-beta" targetFramework="portable-win81+wpa81" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable46-win81+wpa81" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="portable46-win81+wpa81" />
+  <package id="NotificationsExtensions.Portable" version="1.0.3" targetFramework="portable-win81+wpa81" />
+  <package id="PCLStorage" version="0.9.6" targetFramework="portable-net45+win8+wp8+wpa81" requireReinstallation="true" />
+  <package id="Portable.MvvmLightLibs" version="4.4.32.1" targetFramework="portable-win81+wpa81" />
 </packages>
